--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <main>
             <section class="hero-section">
                 <div class="hero-description">
-                    <h1 class="hero-title">Nice to meet you! I’m <div><span class="my-name">Rajiv Kumar <span
-                                    style="color:var(--dark-black)">.</span></span></div>
+                    <h1 class="hero-title">Nice to meet you! I’m <div><span class="my-name">Rajiv Kumar</div>
                     </h1>
                     <p>
                         Based in the India, I'm a front-end developer
