Update About Section

--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
                 <div class="hero-description">
                     <h1 class="hero-title">About Me</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, totam optio praesentium
-                        eligendi rem non aliquam, ratione ab corrupti consequuntur expedita repellendus corporis tenetur
-                        id aspernatur repellat minima, hic eaque!
+                        Currently a student at B.B. College, I'm excited to share my academic journey and projects with
+                        you. This portfolio
+                        showcases my progress, skills, and experiences as I work towards my degree in BCA. Take a look
+                        at my coursework,
+                        assignments, and personal projects to see what I've been up to!
                     </p>
                     <div class="btn-container">
                         <a href="#projects-section" class="btn primary"><i
