--- a/index.html
+++ b/index.html
@@ -87,11 +87,13 @@
                 <div class="hero-description">
                     <h1 class="hero-title">About Me</h1>
                     <p>
-                        Currently a student at B.B. College, I'm excited to share my academic journey and projects with
-                        you. This portfolio
-                        showcases my progress, skills, and experiences as I work towards my degree in BCA. Take a look
-                        at my coursework,
-                        assignments, and personal projects to see what I've been up to!
+                        Hi, I'm Rajiv Kumar, a front-end developer from India, currently pursuing a BCA at B.B. College.
+                        I’m passionate about
+                        creating visually appealing and user-friendly web applications, with skills in HTML, CSS,
+                        JavaScript, and Bootstrap. My
+                        academic journey has provided me with a solid foundation in computer science and hands-on
+                        experience through various
+                        projects.
                     </p>
                     <div class="btn-container">
                         <a href="#projects-section" class="btn primary"><i
